test: Adds Unit Tests for PosrModelMapper and fixes some PR comments